fix: DuplicatePackagesWarning - avoid top spacing

--- a/packages/ui/src/components/duplicate-packages-warning/duplicate-packages-warning.module.css
+++ b/packages/ui/src/components/duplicate-packages-warning/duplicate-packages-warning.module.css
@@ -18,4 +18,5 @@
   padding: 1px 2px;
   vertical-align: super;
   font-size: 9px;
+  line-height: 1;
 }
